chore: fix scroll height on mobile view

--- a/assets/scss/_test3.scss
+++ b/assets/scss/_test3.scss
@@ -935,7 +935,7 @@ a:hover {
 
   // margin-bottom: 20px;
   // width: 100%;
-  height: 21rem;
+  height: 22rem;
   -webkit-overflow-scrolling: touch;
 
   &::-webkit-scrollbar {
